Lab 4 and Lab 5
Implemented
- functionality for settings menu
- settings activity
- AlertDialog
- remember settings using SharedPreferences
- theme switch only works when MainActivity restarted

--- a/SecondApplication/app/src/main/res/menu/main_menu.xml
+++ b/SecondApplication/app/src/main/res/menu/main_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/ItemId"
-        android:title="Item" />
+        android:id="@+id/SettingsButtonId"
+        android:onClick="openSettings"
+        android:title="Settings" />
+    <item
+        android:id="@+id/DialogButtonId"
+        android:onClick="openDialog"
+        android:title="Open Dialog" />
 </menu>
