Sensors Activity + GPS coords

--- a/SecondApplication/app/src/main/res/menu/main_menu.xml
+++ b/SecondApplication/app/src/main/res/menu/main_menu.xml
@@ -9,4 +9,8 @@
         android:id="@+id/DialogButtonId"
         android:onClick="openDialog"
         android:title="Open Dialog" />
+    <item
+        android:id="@+id/SensorsButtonId"
+        android:onClick="openSensors"
+        android:title="Sensors" />
 </menu>
