--- a/SecondApplication/app/src/main/res/menu/main_menu.xml
+++ b/SecondApplication/app/src/main/res/menu/main_menu.xml
@@ -13,4 +13,8 @@
         android:id="@+id/SensorsButtonId"
         android:onClick="openSensors"
         android:title="Sensors" />
+    <item
+        android:id="@+id/CameraButtonId"
+        android:onClick="openCamera"
+        android:title="Camera" />
 </menu>
